--- a/views/base.pug
+++ b/views/base.pug
@@ -9,7 +9,7 @@ html
         link(rel='shortcut icon' type='imgae/png' href='/img/favicon.png')
         script(src='https://js.stripe.com/v3/')
         link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')    
-    body
+    body(data-alert=`${alert ? alert :  ''}`)
         // Header
         include _header
 
